fix: set dark mode as default

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,13 +22,15 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 
-  body {
-    color: white;
-    @apply bg-background;
-  }
+/* @media (prefers-color-scheme: dark) { */
+/* dark mode properties */
+
+html {
+  color-scheme: dark;
+}
+
+body {
+  color: white;
+  @apply bg-background;
 }
